--- a/config/MSSM_HWW.yaml
+++ b/config/MSSM_HWW.yaml
@@ -24,7 +24,6 @@ training_weight_branch: "training_weight"
 
 # Define the processes and the according files
 processes:
-
     H_htt:
         files:
             - latino/latino_GluGluHToTauTau_M125.root
@@ -134,7 +133,7 @@ processes:
             - latino/latino_DYJetsToTT_MuEle_M-50_ext1__part1.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*(0.876979+gen_ptll*(4.11598e-03)-(2.35520e-05)*gen_ptll*gen_ptll)*(1.10211 * (0.958512 - 0.131835*TMath::Erf((gen_ptll-14.1972)/10.1525)))*(gen_ptll<140)+0.891188*(gen_ptll>=140)*(0.00725432292044/baseW)"
-        class:          DYM50
+        class:          DY
 
     DYM10_50:
         files:
@@ -142,16 +141,16 @@ processes:
             #- latino/latino_DYJetsToLL_M-10to50-LO.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*(0.876979+gen_ptll*(4.11598e-03)-(2.35520e-05)*gen_ptll*gen_ptll)*(1.10211 * (0.958512 - 0.131835*TMath::Erf((gen_ptll-14.1972)/10.1525)))*(gen_ptll<140)+0.891188*(gen_ptll>=140)*35.9"
-        class:          DY10_50
+        class:          DY
 
-    ggWW:
+    ggww:
         files:
             - latino/latino_GluGluWWTo2L2Nu_MCFM.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*35.9"
-        class:          ggWW
+        class:          WW
 
-    WW:
+    ww:
         files:
             - latino/latino_WWTo2L2Nu.root
         cut_string:     "(trigger==1)"
@@ -176,7 +175,7 @@ processes:
             - latino/latino_Zg__part2.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*METFilter_MC* !(Gen_ZGstar_mass > 0 && Gen_ZGstar_MomId == 22 )*35.9"
-        class:          Vg
+        class:          DiBoson
 
     VgS:
         files:
@@ -184,7 +183,7 @@ processes:
             - latino/latino_WgStarLNuMuMu.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*1.4*35.9"
-        class:          VgS
+        class:          DiBoson
 
     VZ:
         files:
@@ -201,7 +200,7 @@ processes:
             - latino/latino_ZZTo2L2Q__part2.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*1.11*35.9"
-        class:          VZ
+        class:          DiBoson
 
     MuonEG_WJets:
         files:
@@ -321,7 +320,7 @@ processes:
             - latino/latino_ST_tW_top.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*35.9"
-        class:          SingleTop
+        class:          Top
 
     TTBar:
         files:
@@ -347,7 +346,7 @@ processes:
             - latino/latino_TTTo2L2Nu__part20.root
         cut_string:     "(trigger==1)"
         weight_string:  "XSWeight*SFweight2l*LepSF2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*LepCut2l__ele_cut_WP_Tight80X__mu_cut_Tight80x*GenLepMatch2l*METFilter_MC*(TMath::Sqrt( TMath::Exp(0.0615-0.0005*topLHEpt) * TMath::Exp(0.0615-0.0005*antitopLHEpt) ) )*35.9"
-        class:          TTBar
+        class:          Top
 
 
 
@@ -461,6 +460,7 @@ processes:
 trainingssets:
     - /net/scratch_cms3b/fackeldey/trainingssets/fold0_MSSM_HWW_trainingsset.root
     - /net/scratch_cms3b/fackeldey/trainingssets/fold1_MSSM_HWW_trainingsset.root
+
 
 classes:
     - hww120_200
