--- a/tasks/docker/hww/Dockerfile
+++ b/tasks/docker/hww/Dockerfile
@@ -1,14 +1,14 @@
-FROM riga/law_example_base
+FROM pfackeldey/base
 
 # labels
-LABEL name="law_example_singletop"
+LABEL name="hww"
 LABEL version="0.0.1"
 
 # workdor
 WORKDIR /root/law_example
 
 # basic environment variables
-ENV LAW_SANDBOX docker::riga/law_example_singletop
+ENV LAW_SANDBOX docker::pfackeldey/hww
 
 # python packages
 RUN pip install numpy
@@ -18,8 +18,6 @@ RUN pip install numexpr
 RUN pip install pandas
 RUN pip install scikit-learn
 RUN pip install root_numpy
-RUN pip install scinum
-RUN pip install order
 RUN pip install seaborn
 RUN pip install tensorflow
 RUN pip install keras
