Running law setup.

--- a/tasks/luigi.cfg
+++ b/tasks/luigi.cfg
@@ -1,5 +1,9 @@
 [core]
 
+default-scheduler-host: lx3b83.physik.rwth-aachen.de
+default-scheduler-port: 8082
+parallel-scheduling: False
+log_level: INFO
 no_lock: True
 
 
@@ -9,3 +13,12 @@ keep_alive: True
 ping_interval: 20
 wait_interval: 20
 max_reschedules: 0
+check_unfulfilled_deps: False
+
+
+[scheduler]
+
+record_task_history: False
+remove-delay: 86400
+retry-delay: 30
+worker-disconnect-delay: 30
