--- a/tasks/law.cfg
+++ b/tasks/law.cfg
@@ -1,3 +1,25 @@
 [modules]
 
-analysis.tasks
+analysis.test
+
+
+[logging]
+
+law: WARNING
+
+
+[job]
+
+job_file_dir: $ANALYSIS_DATA_PATH/jobs
+
+
+[wlcg_fs]
+
+base: srm://grid-srm.physik.rwth-aachen.de:8443/srm/managerv2?SFN=/pnfs/physik.rwth-aachen.de/cms/store/user/mfackeld/ml_data
+base_listdir: gsiftp://grid-srm.physik.rwth-aachen.de//pnfs/physik.rwth-aachen.de/cms/store/user/mfackeld/ml_data
+cache_root: $ANALYSIS_REMOTE_CACHE
+
+
+[eos_phys_higgs_fs]
+
+base: srm://srm-eoscms.cern.ch:8443/srm/v2/server?SFN=/eos/cms/store/group/phys_higgs/cmshww/amassiro/Full2016_Apr17
