mainly structural changes & small bugfixes in law & updated README.md

--- a/tasks/law.cfg
+++ b/tasks/law.cfg
@@ -23,3 +23,7 @@ cache_root: $ANALYSIS_REMOTE_CACHE
 [eos_phys_higgs_fs]
 
 base: srm://srm-eoscms.cern.ch:8443/srm/v2/server?SFN=/eos/cms/store/group/phys_higgs/cmshww/amassiro/Full2016_Apr17
+
+[target]
+
+tmp_dir: $ANALYSIS_TMP_DIR
